# sample-pyhello

./: setup.cfg
pyhello/: hello.py
src/pyhello/: __init__.py  hello.py
tests/: test_hello.py
