[metadata]
name = pyhello
version = attr: pyhello.__version__
url = https://github.com/poppen/sample-pyhello
author = Shinsuke Matsui
author_email = poppen.jp@gmail.com
license_file = MIT
description = Python package says hello

[options]
packages = find:
package_dir =
	=src

[options.packages.find]
where = src
