[metadata]
name = pyhello
version = attr: pyhello.__version__
url = https://github.com/poppen/sample-pyhello
author = Shinsuke Matsui
author_email = poppen.jp@gmail.com
license_file = MIT
description = Python package says hello

[options]
packages = find:
package_dir =
	=src
setup_requires =
	pytest-runner
tests_require =
	pytest

[options.packages.find]
where = src

[aliases]
test = pytest

[tool:pytest]
python_files = tests/*
